# spl-practice

./: .gitignore  Cargo.toml  Makefile  README.org
app/: Cargo.toml
app/src/: main.rs
program/: Cargo.toml
program/src/: lib.rs
program/src/states/: account_state.rs  mod.rs
src/: lib.rs
