[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
name = "expiry_token"
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5.1", features = ["borsh-derive"] }
solana-program = "2.1.0"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }

[features]
default = []
no-entrypoint = []